cmake_minimum_required(VERSION 3.10)

add_subdirectory("Test")
add_subdirectory("EnumClass")
add_subdirectory("weakPtr")
add_subdirectory("reference")
add_subdirectory("orm")
add_subdirectory("dynamic_cast")
add_subdirectory("Execute_before_main")
add_subdirectory("rpc")
add_subdirectory("asctime")
add_subdirectory("addressof")
add_subdirectory("22")
add_subdirectory("56")
add_subdirectory("69")
add_subdirectory("105")
add_subdirectory("129")
add_subdirectory("141")
add_subdirectory("148")
add_subdirectory("211")
add_subdirectory("417")
add_subdirectory("718")
add_subdirectory("1277")
add_subdirectory("26Z")
add_subdirectory("6Z")
add_subdirectory("38Z")
add_subdirectory("33Z")
add_subdirectory("1")
add_subdirectory("5")
add_subdirectory("15")
add_subdirectory("20")
add_subdirectory("31")
add_subdirectory("33")
add_subdirectory("46")
add_subdirectory("53")
add_subdirectory("54")
add_subdirectory("60")
add_subdirectory("102")
add_subdirectory("102_2")
add_subdirectory("102_3")
add_subdirectory("103")
add_subdirectory("103_2")
add_subdirectory("121")
add_subdirectory("199")
add_subdirectory("200")
add_subdirectory("202_2")
add_subdirectory("215")
add_subdirectory("236")
add_subdirectory("300")
add_subdirectory("1003")
add_subdirectory("Copy_structure")
add_subdirectory("memory_model")
add_subdirectory("asio")
add_subdirectory("auto")
add_subdirectory("inline")
add_subdirectory("any")
add_subdirectory("backtrace")
add_subdirectory("dlopen")
add_subdirectory("DNS")
add_subdirectory("enableShard")
add_subdirectory("fstream")
add_subdirectory("getopt")
add_subdirectory("memory")
add_subdirectory("new")
add_subdirectory("regex")
add_subdirectory("register")
add_subdirectory("rpcexp")
add_subdirectory("sharedPtr")
add_subdirectory("sqlite3")
add_subdirectory("syslog")
add_subdirectory("ThreadPool")
add_subdirectory("TimerTest")
add_subdirectory("tuple")
add_subdirectory("reference_wrapper")
add_subdirectory("unordered_set")
add_subdirectory("type")
