cmake_minimum_required(VERSION 3.10)

add_subdirectory("Test")
add_subdirectory("EnumClass")
add_subdirectory("weakPtr")
add_subdirectory("reference")
add_subdirectory("orm")
add_subdirectory("dynamic_cast")
add_subdirectory("Execute_before_main")
add_subdirectory("rpc")
add_subdirectory("asctime")
add_subdirectory("addressof")
add_subdirectory("22")
add_subdirectory("56")
add_subdirectory("69")
add_subdirectory("105")
add_subdirectory("129")
add_subdirectory("141")
add_subdirectory("148")
add_subdirectory("211")
add_subdirectory("417")
add_subdirectory("718")
add_subdirectory("1277")
add_subdirectory("26Z")
add_subdirectory("6Z")
add_subdirectory("38Z")
add_subdirectory("33Z")
add_subdirectory("1")
add_subdirectory("5")
add_subdirectory("15")
add_subdirectory("20")
add_subdirectory("31")
add_subdirectory("33")
add_subdirectory("46")
add_subdirectory("53")
add_subdirectory("54")
add_subdirectory("60")
add_subdirectory("102")
add_subdirectory("102_2")
add_subdirectory("102_3")
add_subdirectory("103")
add_subdirectory("103_2")
add_subdirectory("121")
add_subdirectory("199")
add_subdirectory("200")
add_subdirectory("202_2")
add_subdirectory("215")
add_subdirectory("236")
add_subdirectory("300")
add_subdirectory("1003")
add_subdirectory("Copy_structure")
add_subdirectory("memory_model")
add_subdirectory("asio")
add_subdirectory("auto")
add_subdirectory("inline")
add_subdirectory("any")
add_subdirectory("backtrace")
add_subdirectory("dlopen")
add_subdirectory("DNS")
add_subdirectory("enableShard")
add_subdirectory("fstream")

# add_subdirectory("getopt")
add_subdirectory("memory")
add_subdirectory("new")
add_subdirectory("regex")
add_subdirectory("register")
add_subdirectory("rpcexp")
add_subdirectory("sharedPtr")
add_subdirectory("sqlite3")
add_subdirectory("syslog")
add_subdirectory("ThreadPool")
add_subdirectory("TimerTest")
add_subdirectory("tuple")
add_subdirectory("reference_wrapper")
add_subdirectory("unordered_set")
add_subdirectory("type")
add_subdirectory("typeid")
add_subdirectory("getline")
add_subdirectory("json")
add_subdirectory("Variable_parameter_template")
add_subdirectory("sizeof...")
add_subdirectory("folded_expression")
add_subdirectory("folded_expression2")
add_subdirectory("fold_expression_empty_packet_processing")
add_subdirectory("class_template")
add_subdirectory("visit_struct")
add_subdirectory("optional")
add_subdirectory("sscanf")
add_subdirectory("popen")
add_subdirectory("protobuf")
add_subdirectory("gcovr")
add_subdirectory("async")
add_subdirectory("inlineStatic")
add_subdirectory("gtest")
add_subdirectory("dbg")
add_subdirectory("boostLambda")
add_subdirectory("giomm")
add_subdirectory("sqlit3pp")
add_subdirectory("invocable")
add_subdirectory("promise")
add_subdirectory("packaged_task")
add_subdirectory("libevent")
add_subdirectory("looper")
add_subdirectory("rpc_client")
add_subdirectory("vec")
add_subdirectory("stream")
add_subdirectory("threadTest")
add_subdirectory("runableHandlerTest")
add_subdirectory("string")

if(APPLE)
    add_subdirectory("tinyXml2")
endif()

add_subdirectory("overload")
add_subdirectory("quoted")
add_subdirectory("as_bytes")
add_subdirectory("atomic")
add_subdirectory("boolalpha")
add_subdirectory("match_format")
add_subdirectory("locale")
add_subdirectory("strategy")
add_subdirectory("Observer")
add_subdirectory("enable_shared_from_this")
add_subdirectory("from_chars")
add_subdirectory("mem_fn")
add_subdirectory("chrnon")
add_subdirectory("char")
add_subdirectory("subprocess1")
add_subdirectory("Throw_an_exception_at_destructor_time")
