cmake_minimum_required(VERSION 3.10)
add_subdirectory("22")
add_subdirectory("56")
add_subdirectory("105")
add_subdirectory("129")
add_subdirectory("141")
add_subdirectory("148")
add_subdirectory("211")
add_subdirectory("718")
add_subdirectory("1277")
add_subdirectory("26Z")
add_subdirectory("6Z")
add_subdirectory("38Z")
add_subdirectory("33Z")
add_subdirectory("1")
add_subdirectory("5")
add_subdirectory("15")
add_subdirectory("20")
add_subdirectory("31")
add_subdirectory("33")
add_subdirectory("53")
add_subdirectory("54")
add_subdirectory("60")
add_subdirectory("102")
add_subdirectory("102_2")
add_subdirectory("102_3")
add_subdirectory("103")
add_subdirectory("103_2")
add_subdirectory("121")
add_subdirectory("199")
add_subdirectory("200")
add_subdirectory("202_2")
add_subdirectory("236")
add_subdirectory("300")
add_subdirectory("1003")
add_subdirectory("997")
add_subdirectory("1791")
add_subdirectory("1971")
add_subdirectory("455")
add_subdirectory("135")
add_subdirectory("605")
add_subdirectory("452")
add_subdirectory("763")
add_subdirectory("122")
add_subdirectory("167")
add_subdirectory("88")
add_subdirectory("142")
add_subdirectory("76")
add_subdirectory("633")
add_subdirectory("680")
add_subdirectory("524")
add_subdirectory("69")
add_subdirectory("34")
add_subdirectory("81")
add_subdirectory("154")
add_subdirectory("540")
add_subdirectory("quickSort")
add_subdirectory("215")
add_subdirectory("347")
add_subdirectory("451")
add_subdirectory("695")
add_subdirectory("547")
add_subdirectory("417")
add_subdirectory("46")
add_subdirectory("77")
add_subdirectory("79")
add_subdirectory("934")
add_subdirectory("130")
add_subdirectory("257")
add_subdirectory("47")
add_subdirectory("40")
add_subdirectory("310")
add_subdirectory("311")
add_subdirectory("FindStonePair")
add_subdirectory("RabbitGoesHome")
add_subdirectory("HJ5")
add_subdirectory("11839")
add_subdirectory("kmp")
add_subdirectory("NC100")
add_subdirectory("HJ70")
add_subdirectory("HW")
add_subdirectory("HJ65")
add_subdirectory("JZ4")
add_subdirectory("NC52")
add_subdirectory("1614")
add_subdirectory("NC175")
add_subdirectory("0808")
add_subdirectory("674")
add_subdirectory("NC17")
add_subdirectory("NC28")
add_subdirectory("SA")
add_subdirectory("SB")
add_subdirectory("SC")
add_subdirectory("SE")
add_subdirectory("94")
add_subdirectory("2347")
add_subdirectory("2")
add_subdirectory("3")
add_subdirectory("4")
add_subdirectory("11")
add_subdirectory("17")
add_subdirectory("19")
add_subdirectory("21")
add_subdirectory("39")
add_subdirectory("46a")
add_subdirectory("48")
add_subdirectory("49")
add_subdirectory("53a")
add_subdirectory("53b")
